# chariott-example-applications

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md  SECURITY.md  buf.work.yaml
.cargo/: config
.github/workflows/: codeql.yml  dotnet-ci.yml  markdown-ci.yml  notice-generation.yaml  rust-ci.yml
dogmode/: README.md
intent_brokering/dogmode/: README.md
intent_brokering/dogmode/applications/: Dockerfile.mock-vas  Dockerfile.simulated-camera  build-all-containers.sh  run_demo.sh  run_demo_containers.sh
intent_brokering/dogmode/applications/cloud-object-detection/: Cargo.toml  README.md
intent_brokering/dogmode/applications/cloud-object-detection/src/: detection.rs  intent_provider.rs
intent_brokering/dogmode/applications/dog-mode-logic/src/: dog_mode_status.rs  main.rs
intent_brokering/dogmode/applications/dog-mode-ui/: .editorconfig  README.md
intent_brokering/dogmode/applications/dog-mode-ui/src/: DogModeDashboard.csproj  Program.cs
intent_brokering/dogmode/applications/kv-app/: Cargo.toml
intent_brokering/dogmode/applications/kv-app/src/: intent_provider.rs  main.rs
intent_brokering/dogmode/applications/local-object-detection/: Cargo.toml  README.md
intent_brokering/dogmode/applications/local-object-detection/src/: detection.rs  intent_provider.rs
intent_brokering/dogmode/applications/mock-vas/: Cargo.toml  README.md
intent_brokering/dogmode/applications/mock-vas/src/: intent_provider.rs  main.rs  simulation.rs
intent_brokering/dogmode/applications/simulated-camera/: Cargo.toml  README.md
intent_brokering/dogmode/applications/simulated-camera/src/: camera.rs  communication.rs  intent_provider.rs  main.rs
intent_brokering/dogmode/common/: Cargo.toml  build.rs
intent_brokering/dogmode/common/src/examples/: detection.rs
intent_brokering/dogmode/common/src/intent_brokering/: api.rs  inspection.rs  provider.rs  registration.rs  streaming.rs  value.rs
system_config/: README.md  params.yaml  sys_config.yaml
system_config/scripts/: replace_params_yaml.sh  sys_config.sh
system_config/template/: README.md  sys_config.yaml
system_config/template/example_service_config/: agemo_config.yaml
tools/: .markdownlinkcheck.json  notice_generation.sh
