[package]
name = "mock-vas"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-std = "1.12"
async-trait = { workspace = true }
intent_brokering_common = { workspace = true }
intent_brokering_proto = { workspace = true }
ess = { path = "../../../../external/chariott/intent_brokering/ess" }
examples-common = { path = "../../common/" }
futures = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
intent_brokering_common = { workspace = true }
env_logger = "*"
test-log = "0.2.15"
tokio-test = "0.4.4"

[build-dependencies]
tonic-build = { workspace = true }
